--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -168,7 +168,7 @@ color: white !important;}
 }
 
 .bg {
-  background-image: url(/1718-BaP/images/button.png);
+  background-image: url(/1718-3CMO-BaP-arnevrom/images/button.png);
 background-size:cover;
 
   width: 10.3rem;
