--- a/pages/templates/banner.html
+++ b/pages/templates/banner.html
@@ -1,8 +1,8 @@
 ---
 # layout: vertical
-permalink: templates/visitekaartje
+permalink: templates/banner
 published: true
-title: Visitekaartje
+title: Banner
 ---
 
 
@@ -16,7 +16,7 @@ title: Visitekaartje
                     </div> 
 
                 <div class="col-12 col-md-8 col-lg-8 mycolor2  template-text text-padding">
-                        <h1>Visitekaartje</h1>
+                        <h1>Banner</h1>
                         
                         <p>
                                         Voor margens en positionering van elementen vindt je alles terug op de illustratie links.
