--- a/pages/templates/banner.html
+++ b/pages/templates/banner.html
@@ -31,8 +31,6 @@ title: Banner
                         <div class="col-12 col-md-6 col-lg-6 float-left">
             <p>     <strong>Logo</strong> <br>
                    <strong>Afmetingen: </strong>  700mm hoog x 825mm breed <br>
-                     <br>
-                    
                     <strong>CMYK:</strong> 0/0/0/0 <br>
                     <strong>RGB:</strong> 256/256/256 <br>
                    
@@ -48,11 +46,11 @@ title: Banner
 
                 </p>
                 <p>
-                                <strong> Grafisch & kleuren</strong> <br>
+                                <strong> Kleuren</strong> <br>
          
                                 <strong>CMYK:</strong> 0/88/74/0 <br>
                                 <strong>RGB:</strong> 200/60/60 <br>
-                                Maar met 50% transparantie.
+                                Hetzelfde voor het grafisch element maar met 50% transparantie.
          
                          </p>
             </p>
