--- a/pages/templates/banner.html
+++ b/pages/templates/banner.html
@@ -58,7 +58,7 @@ title: Banner
             <h2>Template</h2>
                         
             <div class="button">
-                        <div><a href="../templates/sjabloon_banner.zip" class="btn">Download <i class="fas fa-download"></i></a></div>
+                        <div><a href="../templates/sjabloon_banner.zip" download="" class="btn">Download <i class="fas fa-download"></i></a></div>
                         <div class="bg"></div>
       
       </div>
