--- a/pages/templates/visitekaart.html
+++ b/pages/templates/visitekaart.html
@@ -55,7 +55,7 @@ title: Visitekaartje
             <h2>Template</h2>
                         
             <div class="button">
-                        <div><a href="../templates/sjabloon_kaartje.zip" class="btn">Download <i class="fas fa-download"></i></a></div>
+                        <div><a href="../templates/sjabloon_kaartje.zip" download="" class="btn">Download <i class="fas fa-download"></i></a></div>
                         <div class="bg"></div>
       
       </div>
