--- a/pages/templates/banner.html
+++ b/pages/templates/banner.html
@@ -55,11 +55,14 @@ title: Banner
                          </p>
             </p>
         </div>
+        <div class="col-12 col-md-6 col-lg-6 float-left">
             <h2>Template</h2>
                         
             <div class="button">
                         <div><a href="../templates/sjabloon_banner.zip" download="" class="btn">Download <i class="fas fa-download"></i></a></div>
                         <div class="bg"></div>
+
+                        
       
       </div>
 
