--- a/pages/templates/banner.html
+++ b/pages/templates/banner.html
@@ -25,7 +25,7 @@ title: Banner
                         <p>
                             De banner is een een frontlit banner van <strong>5m op 3m</strong> met <strong> zoomringen om de 30 cm.</strong>
                             De banner mag <strong>niet aangepast worden</strong> met uitzondering van de afbeelding onderaan en/of achtergrond kleur.
-                            De <strong> achtergrond </strong> mag veranderd worden naar zowel een van de <strong> primaire als secundaire kleuren. </strong>
+                            De <strong> achtergrond </strong> blijft <strong>altijd het primaire rood.</strong>
 
             </p>
                         <div class="col-12 col-md-6 col-lg-6 float-left">
@@ -36,7 +36,7 @@ title: Banner
                    
                    </p>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6 float-left">
+                <div class="col-12 col-md-6 col-lg-6 float-right">
                 <p>
                        <strong> Tekst elementen</strong> <br>
 
