--- a/pages/templates/briefhoofd.html
+++ b/pages/templates/briefhoofd.html
@@ -58,6 +58,7 @@ title: Briefhoofd
                       CMYK: 0/88/74/0 <br>
                     RGB: 231/57/59 <br>
                     HEX: #e7393a <br>
+                    20% transparantie <br>
                 </p> 
                 
               
